--- a/s2/index2.html
+++ b/s2/index2.html
@@ -9,7 +9,26 @@
 <body>
     <div class="index">hi its alina</div>
     <div class="index">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consequuntur corporis cum iste nam veniam at dolore facilis facere, quaerat optio repudiandae accusantium similique commodi officia aliquid recusandae, necessitatibus, in quod suscipit voluptatem et ratione est. Eveniet dolorem porro labore maiores qui quo, voluptatum deserunt suscipit necessitatibus esse, veniam repudiandae dolor fuga animi assumenda vitae at accusantium cupiditate. Ut aut fuga quia distinctio. Accusamus, doloribus possimus! Qui, quaerat cum iste libero esse similique porro autem eaque commodi, consequuntur quo cupiditate magni at nobis molestias sequi nisi mollitia veniam. Inventore et numquam modi aperiam repellendus quas perspiciatis. Nostrum vitae facilis esse.</div>
-    <div class="index"></div>
+    <div class="div-img">
+        <div class="index">
+            <img class="img" src="images.jpg" alt="">
+        </div>
+        <div class="index">
+            <img class="img" src="images.jpg" alt="">
+        </div>
+        <div class="index">
+            <img class="img" src="images.jpg" alt="">
+        </div>
+        <div class="index">
+            <img class="img" src="images.jpg" alt="">
+        </div>
+        <div class="index">
+            <img class="img" src="images.jpg" alt="">
+        </div>
+        <div class="index">
+            <img class="img" src="images.jpg" alt="">
+        </div>
+    </div>
     <div class="index"></div>
 </body>
 </html>
