--- a/s2/index2.html
+++ b/s2/index2.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>me</title>
-    <link rel="stylesheet" href="2.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ALINAASRZAD</title>
+    <link rel="stylesheet" href="2.css" />
+  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+
+  </head>
+  <body>
     <div class="index">hi its alina</div>
-    <div class="index">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consequuntur corporis cum iste nam veniam at dolore facilis facere, quaerat optio repudiandae accusantium similique commodi officia aliquid recusandae, necessitatibus, in quod suscipit voluptatem et ratione est. Eveniet dolorem porro labore maiores qui quo, voluptatum deserunt suscipit necessitatibus esse, veniam repudiandae dolor fuga animi assumenda vitae at accusantium cupiditate. Ut aut fuga quia distinctio. Accusamus, doloribus possimus! Qui, quaerat cum iste libero esse similique porro autem eaque commodi, consequuntur quo cupiditate magni at nobis molestias sequi nisi mollitia veniam. Inventore et numquam modi aperiam repellendus quas perspiciatis. Nostrum vitae facilis esse.</div>
-    <div class="div-img">
-        <div class="index">
-            <img class="img" src="images.jpg" alt="">
-        </div>
-        <div class="index">
-            <img class="img" src="images.jpg" alt="">
-        </div>
-        <div class="index">
-            <img class="img" src="images.jpg" alt="">
-        </div>
-        <div class="index">
-            <img class="img" src="images.jpg" alt="">
-        </div>
-        <div class="index">
-            <img class="img" src="images.jpg" alt="">
-        </div>
-        <div class="index">
-            <img class="img" src="images.jpg" alt="">
-        </div>
+    <div class="index">
+     <p>
+        Hello, I am Alina and you are now on my portfolio page
+        Actually, I am a web designer who cares about my field of work.
+        Also, I have experience working with design software such as Photoshop and...
+        You can see examples of my work below</p>
     </div>
-    <div class="index"></div>
-</body>
+    <div class="div-img">
+      <div class="index">
+        <img class="img" src="images.jpg" alt="" />
+      </div>
+    </div>
+    <div>
+     <p> if you enter your name and your emails , i will call you for more info</p>
+      <form action="">
+        <div>
+          <label for="">Name</label>
+          <input type="text" />
+        </div>
+        <div>
+          <label for="">Email</label>
+          <input type="email" />
+        </div>
+        <button type="submit">Enter</button>
+        <button type="reset">Clear</button>
+      </form>
+      <form action=""><input type="text" list="countries"/>
+      <datalist id="countries">
+        <option>web</option>
+        <option >log</option>
+        <option >ui ux</option>
+        <option >design</option>
+        <option >programmer</option>
+      </datalist>    </form>
+    </div>
+  </body>
 </html>
+  
