--- a/s2/index2.html
+++ b/s2/index2.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-    <div class="animate__animated animate__fadeInLeft">hi its alina</div>
+    <div class="backInDown">hi its alina</div>
     <div class="index">
      <p>
         Hello, I am Alina and you are now on my portfolio page
