--- a/s2/index2.html
+++ b/s2/index2.html
@@ -5,27 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ALINAASRZAD</title>
     <link rel="stylesheet" href="2.css" />
-  
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
-    <div class="backInDown">hi its alina</div>
+    <div class="">hi its alina</div>
     <div class="index">
-     <p>
-        Hello, I am Alina and you are now on my portfolio page
-        Actually, I am a web designer who cares about my field of work.
-        Also, I have experience working with design software such as Photoshop and...
-        You can see examples of my work below</p>
+      <p>
+        Hello, I am Alina and you are now on my portfolio page Actually, I am a
+        web designer who cares about my field of work. Also, I have experience
+        working with design software such as Photoshop and... You can see
+        examples of my work below
+      </p>
     </div>
     <div class="div-img">
       <div class="index">
-        <img class="img" src="images.jpg" alt="" />
+        <img class="img backInDown" src="images.jpg" alt="" />
       </div>
     </div>
     <div>
-     <p> if you enter your name and your emails , i will call you for more info</p>
+      <p>
+        if you enter your name and your emails , i will call you for more info
+      </p>
       <form action="">
         <div>
           <label for="">Name</label>
@@ -38,15 +48,16 @@
         <button type="submit">Enter</button>
         <button type="reset">Clear</button>
       </form>
-      <form action=""><input type="text" list="countries"/>
-      <datalist id="countries">
-        <option>web</option>
-        <option >log</option>
-        <option >ui ux</option>
-        <option >design</option>
-        <option >programmer</option>
-      </datalist>    </form>
+      <form action="">
+        <input type="text" list="countries" />
+        <datalist id="countries">
+          <option>web</option>
+          <option>log</option>
+          <option>ui ux</option>
+          <option>design</option>
+          <option>programmer</option>
+        </datalist>
+      </form>
     </div>
   </body>
 </html>
-  
