--- a/s2/index2.html
+++ b/s2/index2.html
@@ -29,7 +29,7 @@
     </div>
     <div class="div-img">
       <div class="index">
-        <img class="img backInDown" src="images.jpg" alt="" />
+        <img class="img animate__animated.animate__bounce" src="images.jpg" alt="" />
       </div>
     </div>
     <div>
