--- a/s2/index2.html
+++ b/s2/index2.html
@@ -58,6 +58,10 @@
           <option>programmer</option>
         </datalist>
       </form>
+      <form action="">
+        <input type="file">
+      </form>
     </div>
   </body>
 </html>
+ 
