--- a/s2/index2.html
+++ b/s2/index2.html
@@ -6,16 +6,16 @@
     <title>ALINAASRZAD</title>
     <link rel="stylesheet" href="2.css" />
 
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
-    />
-    <link
+    /> -->
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    /> -->
   </head>
   <body>
     <div class="">hi its alina</div>
@@ -29,7 +29,11 @@
     </div>
     <div class="div-img">
       <div class="index">
-        <img class="img animate__animated.animate__bounce" src="images.jpg" alt="" />
+        <img
+          class="img animate__animated.animate__bounce"
+          src="images.jpg"
+          alt=""
+        />
       </div>
     </div>
     <div>
@@ -59,9 +63,29 @@
         </datalist>
       </form>
       <form action="">
-        <input type="file">
+        <input type="file" accept="jpg,.png" />
+      </form>
+      <form action="">
+        <input type="range" id="" min="0" max="100" value="90" />
+      </form>
+      <form action="">
+        <fieldset>
+          <legend>billing a address</legend>
+          <input type="text" />
+          <input type="text" />
+          <input type="text" />
+        </fieldset>
+        <fieldset>
+          <legend>payment</legend>
+          <input type="text" />
+          <input type="text" />
+          <input type="text" />
+        </fieldset>
+      </form>
+      <form action="">
+        <input type="text" required >
+        <button type="submit">submit</button>
       </form>
     </div>
   </body>
 </html>
- 
