--- a/s2/index2.html
+++ b/s2/index2.html
@@ -83,7 +83,7 @@
         </fieldset>
       </form>
       <form action="">
-        <input type="text" required >
+        <input type="text" required minlength="3">
         <button type="submit">submit</button>
       </form>
     </div>
