--- a/s2/index2.html
+++ b/s2/index2.html
@@ -71,9 +71,9 @@
       <form action="">
         <fieldset>
           <legend>billing a address</legend>
-          <input type="text" />
-          <input type="text" />
-          <input type="text" />
+          <input type="text" />country
+          <input type="text" />city
+          <input type="text" />town
         </fieldset>
         <fieldset>
           <legend>payment</legend>
