--- a/s2/index2.html
+++ b/s2/index2.html
@@ -86,6 +86,10 @@
         <input type="text" required minlength="3">
         <button type="submit">submit</button>
       </form>
+
+      <div class="box">
+ Lorem ipsum dolor, sit amet consectetur adipisicing.
+      </div>
     </div>
   </body>
 </html>
