--- a/s2/index2.html
+++ b/s2/index2.html
@@ -18,24 +18,26 @@
     /> -->
   </head>
   <body>
-    <div class="">hi its alina</div>
+    <div class="head">hi its alina</div>
+    <div class="div-img">
+  
+      <img
+        class="img animate__animated.animate__bounce"
+        src="images.jpg"
+        alt=""
+      />
+ 
+  </div>
+  <br>
     <div class="index">
       <p>
-        Hello, I am Alina and you are now on my portfolio page Actually, I am a
-        web designer who cares about my field of work. Also, I have experience
+        Hello, I am Alina and you are <br>now on my portfolio page Actually, I am a
+        web designer <br>who cares about my field of work. Also, I have experience <br>
         working with design software such as Photoshop and... You can see
         examples of my work below
       </p>
     </div>
-    <div class="div-img">
-      <div class="index">
-        <img
-          class="img animate__animated.animate__bounce"
-          src="images.jpg"
-          alt=""
-        />
-      </div>
-    </div>
+   
     <div>
       <p>
         if you enter your name and your emails , i will call you for more info
