--- a/s2/index2.html
+++ b/s2/index2.html
@@ -89,8 +89,7 @@
         <button type="submit">submit</button>
       </form>
 
-      <div class="box">
- Lorem ipsum dolor, sit amet consectetur adipisicing.
+      <div class="box"><img src="image.jpg" alt="">
       </div>
     </div>
   </body>
