--- a/s2/index2.html
+++ b/s2/index2.html
@@ -89,7 +89,14 @@
         <button type="submit">submit</button>
       </form>
 
-      <div class="box"><img src="image.jpg" alt="">
+      <div class="box "><img src="image.jpg" alt="">
+      </div><br>
+      <div class="nav">
+        <ul class="items">
+          <li>link1</li>
+          <li>lnik2</li>
+          <li>lnik3</li>
+        </ul>
       </div>
     </div>
   </body>
