--- a/s2/index2.html
+++ b/s2/index2.html
@@ -54,7 +54,9 @@
         <button type="submit">Enter</button>
         <button type="reset">Clear</button>
       </form>
-      <form action="">
+      <br>
+      <form action="" class="text2">
+        Choose a field
         <input type="text" list="countries" />
         <datalist id="countries">
           <option>web</option>
@@ -63,13 +65,16 @@
           <option>design</option>
           <option>programmer</option>
         </datalist>
-      </form>
+      </form><br>
       <form action="">
         <input type="file" accept="jpg,.png" />
       </form>
       <form action="">
+        <br>
         <input type="range" id="" min="0" max="100" value="90" />
       </form>
+      <br>
+      <br>
       <form action="">
         <fieldset>
           <legend>billing a address</legend>
@@ -77,6 +82,8 @@
           <input type="text" />city
           <input type="text" />town
         </fieldset>
+        <br>
+        <br>
         <fieldset>
           <legend>payment</legend>
           <input type="text" />
@@ -89,7 +96,7 @@
         <button type="submit">submit</button>
       </form>
 
-      <div class="box "><img src="image.jpg" alt="">
+      <!-- <div class="box "><img src="image.jpg" alt=""> -->
       </div><br>
       <div class="nav">
         <ul class="items">
