--- a/s2/index2.html
+++ b/s2/index2.html
@@ -44,13 +44,14 @@
       </p>
       <form action="">
         <div>
-          <label for="">Name</label>
+          <label style="font-size: medium;" for="">Name</label>
           <input type="text" />
         </div>
         <div>
           <label for="">Email</label>
           <input type="email" />
         </div>
+        <br>
         <button type="submit">Enter</button>
         <button type="reset">Clear</button>
       </form>
