--- a/s2/index2.html
+++ b/s2/index2.html
@@ -16,10 +16,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     /> -->
+    <link rel="stylesheet" href="/s2/normalize (1).css">
   </head>
   <body>
     <div class="head">hi its alina</div>
+    <header class="hero"><button class=""> Sign up</button></header>
+    <aside class="side-bar"><button class="">contact</button></aside>
     <div class="div-img">
+<br>
   
       <img
         class="img animate__animated.animate__bounce"
@@ -27,6 +31,7 @@
         alt=""
       />
  
+      <br>
   </div>
   <br>
     <div class="index">
@@ -81,7 +86,9 @@
           <legend>billing a address</legend>
           <input type="text" />country
           <input type="text" />city
-          <input type="text" />town
+          <input type="text" />town <br><br>
+
+          <button type="submit">submit</button>
         </fieldset>
         <br>
         <br>
@@ -89,8 +96,10 @@
           <legend>payment</legend>
           <input type="text" />
           <input type="text" />
-          <input type="text" />
+          <input type="text" /><br><br>
+          <button type="submit">submit</button>
         </fieldset>
+        <br>
       </form>
       <form action="">
         <input type="text" required minlength="3">
@@ -98,7 +107,8 @@
       </form>
 
       <!-- <div class="box "><img src="image.jpg" alt=""> -->
-      </div><br>
+      </div>
+      <br>
       <div class="nav">
         <ul class="items">
           <li>link1</li>
@@ -106,6 +116,13 @@
           <li>lnik3</li>
         </ul>
       </div>
+    <div class="card card--popular">
+      <header class="card__header">
+      <span class="card__price"></span>
+    </header>
+    <div class="card__body">
+      <button class="btn"></button>
+    </div>
     </div>
   </body>
 </html>
