--- a/s2/index2.html
+++ b/s2/index2.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="head">hi its alina</div>
-    <header class="hero"><button class=""> Sign up</button></header>
+    <header class="hero"><button class="sign"> Sign up</button></header>
     <aside class="side-bar"><button class="">contact</button></aside>
     <div class="div-img">
 <br>
@@ -123,6 +123,12 @@
     <div class="card__body">
       <button class="btn"></button>
     </div>
+    </div>
+    <div>
+      <h1>heading 1</h1>
+      <h2>heading 2</h2>
+      <h3>heading 3</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, odit.</p>
     </div>
   </body>
 </html>
