--- a/s2/index2.html
+++ b/s2/index2.html
@@ -16,51 +16,53 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     /> -->
-    <link rel="stylesheet" href="/s2/normalize (1).css">
+    <link rel="stylesheet" href="/s2/normalize (1).css" />
   </head>
   <body>
     <div class="head">hi its alina</div>
-    <header class="hero"><button class="sign"> Sign up</button></header>
-    <aside class="side-bar"><button class="">contact</button></aside>
+    <div class="head-btn">
+      <header class="hero"><button class="sign">Sign up</button></header>
+      <aside class="side-bar"><button class="">Contact</button></aside>
+    </div>
+    <br />
     <div class="div-img">
-<br>
-  
       <img
         class="img animate__animated.animate__bounce"
         src="images.jpg"
         alt=""
       />
- 
-      <br>
-  </div>
-  <br>
+
+      <br />
+    </div>
+    <br />
     <div class="index">
       <p>
-        Hello, I am Alina and you are <br>now on my portfolio page Actually, I am a
-        web designer <br>who cares about my field of work. Also, I have experience <br>
+        Hello, I am Alina and you are <br />now on my portfolio page Actually, I
+        am a web designer <br />who cares about my field of work. Also, I have
+        experience <br />
         working with design software such as Photoshop and... You can see
         examples of my work below
       </p>
     </div>
-   
+
     <div>
       <p>
         if you enter your name and your emails , i will call you for more info
       </p>
       <form action="">
         <div>
-          <label style="font-size: medium;" for="">Name</label>
+          <label style="font-size: medium" for="">Name</label>
           <input type="text" />
         </div>
         <div>
           <label for="">Email</label>
           <input type="email" />
         </div>
-        <br>
+        <br />
         <button type="submit">Enter</button>
         <button type="reset">Clear</button>
       </form>
-      <br>
+      <br />
       <form action="" class="text2">
         Choose a field
         <input type="text" list="countries" />
@@ -71,64 +73,66 @@
           <option>design</option>
           <option>programmer</option>
         </datalist>
-      </form><br>
+      </form>
+      <br />
       <form action="">
         <input type="file" accept="jpg,.png" />
       </form>
       <form action="">
-        <br>
+        <br />
         <input type="range" id="" min="0" max="100" value="90" />
       </form>
-      <br>
-      <br>
+      <br />
+      <br />
       <form action="">
         <fieldset>
           <legend>billing a address</legend>
-          <input type="text" />country
-          <input type="text" />city
-          <input type="text" />town <br><br>
+          <input type="text" />country <input type="text" />city
+          <input type="text" />town <br /><br />
 
           <button type="submit">submit</button>
         </fieldset>
-        <br>
-        <br>
+        <br />
+        <br />
         <fieldset>
           <legend>payment</legend>
           <input type="text" />
           <input type="text" />
-          <input type="text" /><br><br>
+          <input type="text" /><br /><br />
           <button type="submit">submit</button>
         </fieldset>
-        <br>
+        <br />
       </form>
       <form action="">
-        <input type="text" required minlength="3">
+        <input type="text" required minlength="3" />
         <button type="submit">submit</button>
       </form>
 
       <!-- <div class="box "><img src="image.jpg" alt=""> -->
-      </div>
-      <br>
-      <div class="nav">
-        <ul class="items">
-          <li>link1</li>
-          <li>lnik2</li>
-          <li>lnik3</li>
-        </ul>
-      </div>
+    </div>
+    <br />
+    <div class="nav">
+      <ul class="items">
+        <li>link1</li>
+        <li>lnik2</li>
+        <li>lnik3</li>
+      </ul>
+    </div>
     <div class="card card--popular">
       <header class="card__header">
-      <span class="card__price"></span>
-    </header>
-    <div class="card__body">
-      <button class="btn"></button>
-    </div>
+        <span class="card__price"></span>
+      </header>
+      <div class="card__body">
+        <button class="btn">submit</button>
+      </div>
     </div>
     <div>
       <h1>heading 1</h1>
       <h2>heading 2</h2>
       <h3>heading 3</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, odit.</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, odit.
+      </p>
     </div>
   </body>
 </html>
