--- a/s1/index.html
+++ b/s1/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="INDEX.css">
-    <!-- <title>Document</title> -->
+   
 </head>
 <body>
     <header>
-        <div class="box"><h1 class="h1-head">HI MY NAME IS ALINA</h1>
+        <div class="box"><div><h1 class="h1-head">HI MY NAME IS ALINA</h1></div> <br>
+            <div class="" style="display: flex;"><img class="img-ig" src="/s1/style/icon/instagram.svg" alt=""><h2 class="h2-ig">my instagram</h2></div>
         </div>
+       
     </header>
     
     <script src="index.js"></script>
