--- a/s1/index.html
+++ b/s1/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="box"><div><h1 class="h1-head">HI MY NAME IS ALINA</h1></div> <br>
-            <div class="" style="display: flex;"><img class="img-ig" src="/s1/style/icon/instagram.svg" alt=""><h2 class="h2-ig">my instagram</h2></div>
+            <div class="box-ig" ><img class="img-ig" src="/s1/style/icon/instagram.svg" alt=""><h2 class="h2-ig">my instagram</h2></div>
         </div>
        
     </header>
