--- a/s1/index.html
+++ b/s1/index.html
@@ -6,14 +6,17 @@
     <link rel="stylesheet" href="INDEX.css">
    
 </head>
+
 <body>
     <header>
         <div class="box"><div><h1 class="h1-head">HI MY NAME IS ALINA</h1></div> <br>
             <div class="box-ig" ><img class="img-ig" src="/s1/style/icon/instagram.svg" alt=""><h2 class="h2-ig">my instagram</h2></div>
         </div>
-       
     </header>
-    
-    <script src="index.js"></script>
+  <div class="grid grid--1X2">
+   <div style="height: 100px; background: sandybrown"></div>
+   <div style="height: 100px; background: royalblue"></div>
+  </div>
+ <script src="index.js"></script>
 </body>
-</html>
+</html>  
