--- a/s1/index.html
+++ b/s1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="INDEX.css">
-    
+
    
 </head>
 
@@ -21,3 +21,4 @@
  <script src="index.js"></script>
 </body>
 </html>  
+gjyjyyjyjy 
