--- a/s1/index.html
+++ b/s1/index.html
@@ -3,21 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="INDEX.css">
-
-   
+    <link rel="stylesheet" href="index.css">
+    <title>Alina Asrzad</title>
+    <style>
+       
+       </style>
 </head>
-
 <body>
     <header>
-        <div class="box"><div><h1 class="h1-head">HI MY NAME IS ALINA</h1></div> <br>
-            <div class="box-ig" ><img class="img-ig" src="/s1/style/icon/instagram.svg" alt=""><h2 class="h2-ig">my instagram</h2></div>
-        </div>
+        <h1>My Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-  <div class="grid grid--1X2">
-   <div style="height: 100px; background: sandybrown"></div>
-   <div style="height: 100px; background: royalblue"></div>
-  </div>
- <script src="index.js"></script>
+    <main>
+        <h2>Main Content</h2>
+        <p>This is the main content of the page.</p>
+    </main>
+    
+    <footer>
+        <p>Footer content goes here.</p>
+    </footer>
 </body>
-</html>  
+</html>
